Revert "Fix z-index of tooltip arrow"
This reverts commit ee7ad23dde8afd227e02027185cf617c87d68ec4.

--- a/styles/elements/_tooltip.scss
+++ b/styles/elements/_tooltip.scss
@@ -8,8 +8,6 @@
     background-color: $color-aqua-lightest;
     padding: $gap * 3;
     border-left: ($gap / 2) solid $color-blue;
-    position: relative;
-    z-index: 2;
   }
 
   .tooltip-arrow {
